--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+winit = "0.28.6"
 pixels = "0.14.0"
-winit = { version = "0.30.5", features = ["rwh_05"] }
-rayon = "1.10.0"
 num = "0.4.3"
+num-complex = "0.4.6"
+rayon = "1.10.0"
+bytemuck = "1.20.0"
+raw-window-handle = "0.6.2"
+winit_input_helper = "0.14.1"
